# 7th_estate

./: .gitignore  Cargo.toml  Code Walkthrough Video Link.txt  Code Walkthrough Video Links.txt  Makefile  README.md  coverage.sh  example.sh  install.sh  run.sh
Website/: .gitignore
Website/Backend/: blockchain.js  config.json  index.js  package-lock.json  package.json  start.sh
Website/Frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  proxy.conf.js  start.sh
docs/: Election Demo Video Link.txt  audit.txt
examples/: example-debug.sh  example.cmd  example.sh  newpoll.yaml  one-trustee-poll.yaml  roster.csv  serials.csv  votes.csv
src/: lib.rs  main.rs  voter_selection.rs
src/ballots/: mod.rs  print.rs  printed.rs  tagged.rs  untagged.rs
src/blockchain/: blockchain.rs  etherscan.rs  merkle.rs  mod.rs
src/cryptography/: authenticated_encryption.rs  csprng.rs  endian.rs  fast_dice_roller.rs  kdf.rs  mod.rs  secret_sharing.rs  secured_file.rs  signature.rs
src/planes/: column1.rs  column2.rs  column3.rs  filter.rs  mod.rs  record.rs
src/poll_configuration/: complete.rs  mod.rs  new.rs  secured.rs
src/secrets/: mod.rs  poll_master_key.rs  poll_secrets.rs  trustee_shares.rs
src/subcommands/: audit.rs  bind_roster.rs  create_new_poll.rs  generate_drawn_summands.rs  generate_poll_commitments.rs  generate_poll_revelations.rs  generate_print_files.rs  generate_proof.rs  generate_tally_audit.rs  helpers.rs  mod.rs  proofs.rs  record_audited_ballots.rs  record_votes.rs  run.rs  sign.rs
src/summands/: committed.rs  drawn.rs  mod.rs  (+1 more)
tests/: blockchain.rs  merkle.rs  merkle_tests.rs  pdf.rs
(+23 files in other folders)
